import com.github.jengelman.gradle.plugins.shadow.tasks.ShadowJar

plugins {
    id("java")
    id("com.gradleup.shadow") version "9.3.0"
    id("net.kyori.blossom").version("2.2.0")
    id("java-library")
    id("xyz.miguvt.libby.plugin").version("1.2.3")
    id("xyz.kyngs.mcupload.plugin").version("0.3.4")
}

tasks.withType<JavaCompile> {
    options.encoding = "UTF-8"
}

mcupload {
    file = tasks.shadowJar
    swallowErrors = true
    platforms {
        modrinth {
            loaders = listOf("paper", "purpur", "bungeecord", "waterfall", "velocity")
            projectId = "tL0SCXYq"
            gameVersions = listOf(
                "1.21.11", "1.21.10", "1.21.9", "1.21.8", "1.21.7", "1.21.6", "1.21.5", "1.21.4", "1.21.3", "1.21.2", "1.21.1", "1.21",
                "1.20.6", "1.20.5", "1.20.4", "1.20.3", "1.20.2", "1.20.1", "1.20",
                "1.19.4", "1.19.3", "1.19.2", "1.19.1", "1.19",
                "1.18.2", "1.18.1", "1.18",
                "1.17.1", "1.17",
                "1.16.5", "1.16.4", "1.16.3", "1.16.2", "1.16.1", "1.16",
                "1.15.2", "1.15.1", "1.15",
                "1.14.4", "1.14.3", "1.14.2", "1.14.1", "1.14",
                "1.13.2", "1.13.1", "1.13",
            )
            token = System.getenv("MODRINTH_TOKEN")
        }
        polymart {
            apiKey = System.getenv("POLYMART_TOKEN")
            resourceId = "2179"
        }
        github {
            token = System.getenv("GITHUB_TOKEN")
            repository = "MiguVerse/LibreLoginNext"
        }
        discord {
            webhookUrl = System.getenv("DISCORD_WEBHOOK_URL")
            configureEmbed {
                setColor(0x0398FC)
            }
        }
    }
    datasource {
        file {
            readmeFile = "README.md"
            changelogFile = "CHANGELOG.md"
        }
    }
}

repositories {
    // mavenLocal()
    maven { url = uri("https://repo.opencollab.dev/maven-snapshots/") }
    maven { url = uri("https://repo.papermc.io/repository/maven-public/") }
    maven { url = uri("https://hub.spigotmc.org/nexus/") }
    maven { url = uri("https://repo.kyngs.xyz/public/") }
    maven { url = uri("https://repo.aikar.co/content/groups/aikar/") }
    maven { url = uri("https://mvn.exceptionflug.de/repository/exceptionflug-public/") }
    maven { url = uri("https://repo.dmulloy2.net/repository/public/") }
    maven { url = uri("https://repo.alessiodp.com/releases/") }
    maven { url = uri("https://s01.oss.sonatype.org/content/repositories/snapshots/") }
    maven { url = uri("https://repo.codemc.io/repository/maven-releases/") }
    maven { url = uri("https://repo.codemc.io/repository/maven-snapshots/") }
    maven { url = uri("https://jitpack.io/") }
}

sourceSets.main {
    blossom {
        javaSources {
            property("version", version.toString())
        }
    }
}

tasks.withType<ShadowJar> {
    archiveFileName.set("LibreLoginNext.jar")

    dependencies {
        exclude(dependency("org.slf4j:.*:.*"))
        exclude(dependency("org.checkerframework:.*:.*"))
        exclude(dependency("com.google.errorprone:.*:.*"))
        exclude(dependency("com.google.protobuf:.*:.*"))
    }

    relocate("co.aikar.acf", "xyz.miguvt.libreloginnext.lib.acf")
    relocate("com.github.benmanes.caffeine", "xyz.miguvt.libreloginnext.lib.caffeine")
    relocate("com.typesafe.config", "xyz.miguvt.libreloginnext.lib.hocon")
    relocate("com.zaxxer.hikari", "xyz.miguvt.libreloginnext.lib.hikari")
    relocate("org.mariadb", "xyz.miguvt.libreloginnext.lib.mariadb")
    relocate("org.bstats", "xyz.miguvt.libreloginnext.lib.metrics")
    relocate("org.intellij", "xyz.miguvt.libreloginnext.lib.intellij")
    relocate("org.jetbrains", "xyz.miguvt.libreloginnext.lib.jetbrains")
    relocate("io.leangen.geantyref", "xyz.miguvt.libreloginnext.lib.reflect")
    relocate("org.spongepowered.configurate", "xyz.miguvt.libreloginnext.lib.configurate")
    relocate("net.byteflux.libby", "xyz.miguvt.libreloginnext.lib.libby")
    relocate("org.postgresql", "xyz.miguvt.libreloginnext.lib.postgresql")
    relocate("com.github.retrooper.packetevents", "xyz.miguvt.libreloginnext.lib.packetevents.api")
    relocate("io.github.retrooper.packetevents", "xyz.miguvt.libreloginnext.lib.packetevents.platform")
}

java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(21))
    }
}

tasks.withType<Jar> {
    from("../LICENSE.txt")
}

libby {
    excludeDependency("org.slf4j:.*:.*")
    excludeDependency("org.checkerframework:.*:.*")
    excludeDependency("com.google.errorprone:.*:.*")
    excludeDependency("com.google.protobuf:.*:.*")

    // Often redeploys the same version, so calculating checksum causes false flags
    noChecksumDependency("com.github.retrooper.packetevents:.*:.*")
}

configurations.all {
    // I hate this, but it needs to be done as bungeecord does not support newer versions of adventure, and packetevents includes it
    resolutionStrategy {
        force("net.kyori:adventure-text-minimessage:4.25.0")
        force("net.kyori:adventure-text-serializer-gson:4.25.0")
        force("net.kyori:adventure-text-serializer-legacy:4.25.0")
        force("net.kyori:adventure-text-serializer-json:4.25.0")
        force("net.kyori:adventure-api:4.25.0")
        force("net.kyori:adventure-nbt:4.25.0")
        force("net.kyori:adventure-key:4.25.0")
    }
}

dependencies {
    //API
    implementation(project(":API"))

    //Velocity
    annotationProcessor("com.velocitypowered:velocity-api:3.4.0-SNAPSHOT")
    compileOnly("com.velocitypowered:velocity-api:3.4.0-SNAPSHOT")
    compileOnly("com.velocitypowered:velocity-proxy:3.2.0-SNAPSHOT-277")

    //MySQL
    libby("org.mariadb.jdbc:mariadb-java-client:3.5.6")
    libby("com.zaxxer:HikariCP:7.0.2")

    //SQLite
    libby("org.xerial:sqlite-jdbc:3.51.1.0")

    //PostgreSQL
    libby("org.postgresql:postgresql:42.7.8")

    //ACF
    libby("co.aikar:acf-velocity:0.5.1-SNAPSHOT")
    libby("co.aikar:acf-bungee:0.5.1-SNAPSHOT")
    libby("co.aikar:acf-paper:0.5.1-SNAPSHOT")

    //Utils
    libby("com.github.ben-manes.caffeine:caffeine:3.2.3")
    libby("org.spongepowered:configurate-hocon:4.2.0")
    libby("at.favre.lib:bcrypt:0.10.2")
    libby("dev.samstevens.totp:totp:1.7.1")
    libby("org.bouncycastle:bcprov-jdk18on:1.83")
    libby("org.apache.commons:commons-email:1.6.0")
    // DO NOT UPGRADE TO 4.15.0 OR ABOVE BEFORE TESTING WATERFALL AND BUNGEECORD COMPATIBILITY!!!
    libby("net.kyori:adventure-text-minimessage:4.14.0")
    libby("com.github.kyngs:LegacyMessage:0.2.0")

    //Geyser
    compileOnly("org.geysermc.floodgate:api:2.2.5-SNAPSHOT")
    compileOnly("org.geysermc.cumulus:cumulus:2.0.0-SNAPSHOT")

    //LuckPerms
    compileOnly("net.luckperms:api:5.4")

    //Bungeecord
    compileOnly("net.md-5:bungeecord-api:1.21-R0.5-SNAPSHOT")
    compileOnly("com.github.ProxioDev.ValioBungee:RedisBungee-Bungee:0.12.6")
    libby("net.kyori:adventure-platform-bungeecord:4.4.1")

    //BStats
    libby("org.bstats:bstats-velocity:3.1.0")
    libby("org.bstats:bstats-bungeecord:3.1.0")
    libby("org.bstats:bstats-bukkit:3.1.0")

    //Paper
    compileOnly("io.papermc.paper:paper-api:1.21.11-R0.1-SNAPSHOT")
    //compileOnly "com.comphenix.protocol:ProtocolLib:5.1.0"
    libby("com.github.retrooper:packetevents-spigot:2.11.0")

    //PacketEvents for Velocity and BungeeCord
    libby("com.github.retrooper:packetevents-velocity:2.11.0")
    libby("com.github.retrooper:packetevents-bungeecord:2.11.0")

    compileOnly("io.netty:netty-transport:4.2.8.Final")
    compileOnly("com.mojang:datafixerupper:8.0.16") //I hate this so much
    compileOnly("org.apache.logging.log4j:log4j-core:2.25.2")

    //Libby
    implementation("com.github.MiguVerse.libby:libby-bukkit:2a5d50f04b")
    implementation("com.github.MiguVerse.libby:libby-velocity:2a5d50f04b")
    implementation("com.github.MiguVerse.libby:libby-bungee:2a5d50f04b")
    implementation("com.github.MiguVerse.libby:libby-paper:2a5d50f04b")

    //NanoLimboPlugin
    compileOnly("com.github.bivashy.NanoLimboPlugin:api:1.0.8") // TODO Need research on why it's not working if we change to something upper than 1.0.8, no breaking changes documented...
}

tasks.withType<ProcessResources> {
    outputs.upToDateWhen { false }
    filesMatching("plugin.yml") {
        expand(mapOf("version" to version))
    }
    filesMatching("bungee.yml") {
        expand(mapOf("version" to version))
    }
    filesMatching("paper-plugin.yml") {
        expand(mapOf("version" to version))
    }
}